--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -1,10 +1,10 @@
 name: Main Extension Distribution Pipeline
 on:
-  push: null
-  pull_request: null
-  workflow_dispatch: null
+  push:
+  pull_request:
+  workflow_dispatch:
   schedule:
-  - cron: 0 2 * * *
+    - cron: '0 2 * * *'
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{
     github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}
