--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -12,9 +12,9 @@ concurrency:
 jobs:
   duckdb-stable-build:
     name: Build extension binaries
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@v1.4.3
     with:
-      duckdb_version: main
-      ci_tools_version: main
+      duckdb_version: v1.4.3
+      ci_tools_version: v1.4.3
       extension_name: lindel
       enable_rust: true
