--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -18,3 +18,4 @@ jobs:
       ci_tools_version: v1.4.3
       extension_name: lindel
       enable_rust: true
+      exclude_archs: ${{ github.event_name == 'pull_request' && 'linux_arm64;osx_amd64;osx_arm64;windows_amd64;windows_amd64_mingw;wasm_mvp;wasm_eh;wasm_threads' || '' }}
